--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "chat",
   "version": "0.1.0",
   "private": true,
+  "author": "Alexandr Golovchuk",
+  "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
